// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputController /> .render should be disabled if disabled=true: Disabled 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-ppmla1"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      role="group"
    >
      <div
        class="css-gg4vpm"
      />
      <div
        class="chakra-input__group css-bx0blc"
        data-group="true"
      >
        <input
          autocomplete="off"
          class="chakra-input css-1tcppn8"
          data-testid="input-test"
          disabled=""
          id="field-:r5:"
          name="input-test"
          value=""
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<InputController /> .render should render the component: WithLabel 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-ppmla1"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      role="group"
    >
      <div
        class="css-gg4vpm"
      >
        <label
          class="chakra-form__label css-1hfoxt1"
          for="field-:r0:"
          id="field-:r0:-label"
        >
          <div
            class="chakra-stack css-1igwmid"
          >
            <p
              class="chakra-text css-mgupmj"
            >
              test-label
            </p>
          </div>
        </label>
      </div>
      <div
        class="chakra-input__group css-bx0blc"
        data-group="true"
      >
        <input
          autocomplete="off"
          class="chakra-input css-1tcppn8"
          data-testid="input-test"
          id="field-:r0:"
          name="input-test"
          value=""
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<InputController /> .render should render the left element: WithLeftElement 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-ppmla1"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      role="group"
    >
      <div
        class="css-gg4vpm"
      />
      <div
        class="chakra-input__group css-bx0blc"
        data-group="true"
      >
        <span
          data-testid="left-element"
        />
        <input
          autocomplete="off"
          class="chakra-input css-1tcppn8"
          data-testid="input-test"
          id="field-:r7:"
          name="input-test"
          value=""
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<InputController /> .render should render the right element: WithRightElement 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-ppmla1"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      role="group"
    >
      <div
        class="css-gg4vpm"
      />
      <div
        class="chakra-input__group css-bx0blc"
        data-group="true"
      >
        <input
          autocomplete="off"
          class="chakra-input css-1tcppn8"
          data-testid="input-test"
          id="field-:r6:"
          name="input-test"
          value=""
        />
        <span
          data-testid="right-element"
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<InputController /> .render should show placeholder: WithPlaceholder 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-ppmla1"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      role="group"
    >
      <div
        class="css-gg4vpm"
      />
      <div
        class="chakra-input__group css-bx0blc"
        data-group="true"
      >
        <input
          autocomplete="off"
          class="chakra-input css-1tcppn8"
          data-testid="input-test"
          id="field-:r4:"
          name="input-test"
          placeholder="placeholder"
          value=""
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<InputController /> .render should show the error message: WithError 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-ppmla1"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      role="group"
    >
      <div
        class="css-gg4vpm"
      />
      <div
        class="chakra-input__group css-bx0blc"
        data-group="true"
      >
        <input
          aria-describedby="field-:r2:-feedback"
          aria-invalid="true"
          autocomplete="off"
          class="chakra-input css-1tcppn8"
          data-testid="input-test"
          id="field-:r2:"
          name="input-test"
          value=""
        />
      </div>
      <div
        aria-live="polite"
        class="chakra-form__error-message css-10ckq1i"
        data-testid="input-error-message"
        id="field-:r2:-feedback"
      >
        Expired
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
